--- a/src/app.html
+++ b/src/app.html
@@ -12,7 +12,10 @@
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
-	<body class="bg-ctp-base text-ctp-text" data-sveltekit-preload-data="hover">
+	<body
+		class="bg-ctp-base text-ctp-text min-h-screen font-sans antialiased"
+		data-sveltekit-preload-data="hover"
+	>
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
