--- a/src/app.html
+++ b/src/app.html
@@ -13,7 +13,7 @@
 		%sveltekit.head%
 	</head>
 	<body
-		class="bg-ctp-base text-ctp-text min-h-screen font-sans antialiased"
+		class="ctp-mocha bg-ctp-base text-ctp-text min-h-screen font-sans antialiased"
 		data-sveltekit-preload-data="hover"
 	>
 		<div style="display: contents">%sveltekit.body%</div>
